change: apikey usecase, repo & update: swagger doc
